<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>1.5.3.RELEASE</version>
	</parent>
	<groupId>com.hh</groupId>
	<artifactId>spring-boot-parent</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Spring Boot Parent</name>
	<description>Spring Boot Admin</description>
	<url>https://github.com/xx</url>
	<properties>
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<spring-boot-parent.version>1.0.0-SNAPSHOT</spring-boot-parent.version>
		<main.basedir>${basedir}</main.basedir>
		<spring-boot.version>1.5.3.RELEASE</spring-boot.version>
		<spring-cloud-parent.version>Dalston.SR1</spring-cloud-parent.version>
		<hystrix-dashboard.version>1.5.12</hystrix-dashboard.version>
		<build-plugin.jacoco.version>0.7.7.201606060606</build-plugin.jacoco.version>
		<build-plugin.coveralls.version>4.3.0</build-plugin.coveralls.version>
		<build-plugin.exec.version>1.4.0</build-plugin.exec.version>
		<spring-boot-admin-starter.version>1.5.1</spring-boot-admin-starter.version>
	</properties>
	<modules>
		<module>cloud-config-server-svn</module>
		<module>cloud-config-eureka-server-svn</module>
		<module>spring-config-client</module>
		<module>spring-config-eureka-client</module>
		<module>cloud-eureka-server-master</module>
		<module>cloud-eureka-server-back</module>
		<module>spring-eureka-server-registry</module>
		<module>spring-eureka-server-registry-back</module>
		<module>spring-eureka-server-discovery-ribbon</module>
		<module>spring-eureka-server-discovery-feign</module>
		<module>spring-cloud-hystrix</module>
		<module>spring-cloud-hystrix-eureka</module>
		<module>spring-cloud-hystrix-eureka-back</module>
		<module>spring-cloud-turbine</module>
		<module>spring-cloud-zuul-url</module>
		<module>spring-cloud-zuul-eureka</module>
		<module>spring-cloud-zuul-ribbon</module>
		<module>spring-cloud-swagger2</module>
		<module>cloud-monitor-server</module>
		<module>cloud-monitor-server-registry</module>
		<module>cloud-monitor-server-eureka-registry</module>
		<module>cloud-monitor-server-eureka</module>
		<module>cloud-config-server-bus</module>
		<module>cloud-config-client-bus</module>
		<module>cloud-zipkin-server</module>
		<module>cloud-zipkin-client-consumer</module>
		<module>cloud-zipkin-client-provider</module>
		<module>cloud-zipkin-server-rabbitmq</module>
		<module>cloud-zipkin-client-rabbitmq-consumer</module>
		<module>cloud-zipkin-client-rabbitmq-provider</module>
		<module>cloud-zipkin-server-rabbitmq-elasticsearch</module>
		<module>cloud-elk-provider</module>
		<module>spring-cloud-zuul-eureka-filter</module>
		<module>spring-boot-simple</module>
	</modules>
	<organization>
		<name>H&amp;H GROUP</name>
		<url>http://www.hh.global</url>
	</organization>
	<licenses>
		<license>
			<name>Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Shaw</name>
			<email>xiaoxiong@biostime.com</email>
			<organization>H&amp;H GROUP</organization>
		</developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar-no-fork</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
				</configuration>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${build-plugin.exec.version}</version>
					<configuration>
						<executable>java</executable>
						<arguments>
							<argument>-Druntime.env=dev</argument>
							<argument>-DLog4jContextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector</argument>
							<argument>-XX:MaxPermSize=256m</argument>
						</arguments>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>travis</id>
			<activation>
				<property>
					<name>env.TRAVIS</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.jacoco</groupId>
						<artifactId>jacoco-maven-plugin</artifactId>
						<version>${build-plugin.jacoco.version}</version>
						<executions>
							<execution>
								<id>pre-unit-test</id>
								<goals>
									<goal>prepare-agent</goal>
								</goals>
							</execution>
							<execution>
								<id>post-unit-test</id>
								<phase>test</phase>
								<goals>
									<goal>report</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<distributionManagement>
		<repository>
			<id>releases</id>
			<name>Nexus Release Repository</name>
			<url>http://nexus.scm.it/nexus/content/repositories/releases/</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>Sonatype Nexus Snapshots</name>
			<url>http://nexus.scm.it/nexus/content/repositories/snapshots/</url>
		</snapshotRepository>
	</distributionManagement>
	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>com.netflix.hystrix</groupId>
				<artifactId>hystrix-dashboard</artifactId>
				<version>${hystrix-dashboard.version}</version>
			</dependency>
			<dependency>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-dependencies</artifactId>
				<version>${spring-boot.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud-parent.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-starter-client</artifactId>
				<version>${spring-boot-admin-starter.version}</version>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-server</artifactId>
				<version>${spring-boot-admin-starter.version}</version>
			</dependency>
			<dependency>
				<groupId>de.codecentric</groupId>
				<artifactId>spring-boot-admin-server-ui</artifactId>
				<version>${spring-boot-admin-starter.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>